syntax = "proto3";

package api.validation;

option go_package = "server-data/api/validation;validation";
option java_multiple_files = true;
option java_package = "api.validation";

service Validation { 
	rpc GetValidation (GetValidationRequest) returns (GetValidationReply); 
}

enum TYPE {
	DEFAULT = 0;
	DIGIT = 1;
	LETTER = 2;
	MIXED = 3;
}

message GetValidationRequest {
	uint32 length = 1;
	TYPE type = 2;
}
message GetValidationReply {
	string code = 1;
}
 